<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/curve_in_bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="2dp"
        android:padding="10dp"
        android:id="@+id/mainlayout">

        <View
            android:layout_width="120dp"
            android:layout_height="5dp"
            android:background="@color/dark_green"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_use_this_app"
        android:textColor="@color/black"
            android:layout_marginBottom="5dp"
        android:textSize="30sp"
            android:layout_gravity="center"/>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:justifyContent="space_between"
            app:alignItems="center"
            android:id="@+id/step1">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step1"
                android:textColor="@color/black"
                android:textSize="20sp"/>

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:justifyContent="space_between"
            app:alignItems="center"
            app:flexDirection="row_reverse"
            android:id="@+id/step2">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step2"
                android:textColor="@color/black"
                android:textSize="20sp"/>

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:justifyContent="space_between"
            app:alignItems="center"
            android:id="@+id/step3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step3"
                android:textColor="@color/black"
                android:textSize="20sp"/>

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:justifyContent="space_between"
            app:flexDirection="row_reverse"
            app:alignItems="center"
            android:id="@+id/step4">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step4"
                android:textColor="@color/black"
                android:textSize="20sp"/>

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:justifyContent="space_between"
            app:alignItems="center"
            android:id="@+id/step5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step5"
                android:textColor="@color/black"
                android:textSize="20sp"/>

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:justifyContent="space_between"
            app:flexDirection="row_reverse"
            app:alignItems="center"
            android:id="@+id/step6">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step6"
                android:textColor="@color/black"
                android:textSize="20sp"/>

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:justifyContent="space_between"
            app:alignItems="center"
            android:id="@+id/step7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step7"
                android:textColor="@color/black"
                android:textSize="20sp"/>

        </com.google.android.flexbox.FlexboxLayout>



    </LinearLayout>

</androidx.cardview.widget.CardView>