<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addnew"
    android:background="#f3f3f3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_toolbar_layout"
        android:background="@color/dark_green">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/dark_green"
            android:background="@color/dark_green">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addnewstring"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </androidx.appcompat.widget.Toolbar>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_toolbar_layout"
        android:layout_above="@id/belowbuttons"
        android:orientation="vertical"
        android:padding="10dp"
        android:id="@+id/newtreeform">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/species"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:background="@color/white"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/dark_green"
            app:hintTextColor="@color/black"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/speciestext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/enter_tree_species"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                tools:ignore="SpeakableTextPresentCheck" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/height"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:background="@color/white"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/dark_green"
            app:hintTextColor="@color/black"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/heighttext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/enter_tree_height_in_m"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                tools:ignore="SpeakableTextPresentCheck" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/date"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:background="@color/white"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/dark_green"
            app:hintTextColor="@color/black"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/datetext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/enter_plantation_date"
                android:inputType="date"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                tools:ignore="SpeakableTextPresentCheck" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/diameter"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:background="@color/white"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/dark_green"
            app:hintTextColor="@color/black"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/diametertext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/enter_diameter_in_cms"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                tools:ignore="SpeakableTextPresentCheck" />


        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/showingresults"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:visibility="gone"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_baseline_camera_24"
                android:id="@+id/showingresultimage"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:id="@+id/deletephoto"
                android:background="@drawable/gradient_red"
                android:text="@string/delete_photo"
                android:textColor="@color/white"
                android:textStyle="bold"
                />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:id="@+id/getphoto"
            android:background="@drawable/gradient_blue"
            android:text="@string/get_photo"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:id="@+id/getlocation"
            android:background="@drawable/gradient_blue"
            android:text="@string/get_current_location"
            android:textColor="@color/white"
            android:textStyle="bold"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:id="@+id/belowbuttons">

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:justifyContent="space_around">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cleardata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/plane_bg"
                android:text="Clear Data"
                android:layout_marginRight="10dp"
                android:textAllCaps="false"
                android:textColor="@color/dark_green" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/savedata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Save Data"
                android:layout_marginLeft="10dp"
                android:background="@drawable/filledbg"
                android:textColor="@color/white"
                android:textAllCaps="false" />


        </com.google.android.flexbox.FlexboxLayout>


    </LinearLayout>


</RelativeLayout>