<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home_screen"
    android:background="#f3f3f3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_toolbar_layout"
        android:background="@color/dark_green">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/dark_green"
            android:background="@color/dark_green">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appName"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </androidx.appcompat.widget.Toolbar>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstcard"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="12dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:cardPreventCornerOverlap="true"
        android:clickable="true"
        android:focusable="true"
        android:background="@color/light_green"
        android:backgroundTint="@color/light_green"
        android:layout_below="@id/main_toolbar_layout"
        >

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:flexDirection="row"
            app:flexWrap="wrap"
            app:justifyContent="space_around"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saved_tree_info"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_alignSelf="center"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/tree"
                android:id="@+id/treeicon"/>

        </com.google.android.flexbox.FlexboxLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/secondcard"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="12dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:cardPreventCornerOverlap="true"
        android:background="@color/light_green2"
        android:backgroundTint="@color/light_green2"
        android:layout_below="@id/firstcard"
        >

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            app:flexDirection="row_reverse"
            app:flexWrap="wrap"
            app:justifyContent="space_around">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_tree"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_alignSelf="center" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/add_tree" />

        </com.google.android.flexbox.FlexboxLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/thirdcard"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="12dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:cardPreventCornerOverlap="true"
        android:background="@color/bluish"
        android:backgroundTint="@color/bluish"
        android:layout_below="@id/secondcard"
        >

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            app:flexDirection="row"
            app:flexWrap="wrap"
            app:justifyContent="space_around">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_use_this_app"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_alignSelf="center" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/help" />

        </com.google.android.flexbox.FlexboxLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>










